--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.1",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
