--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.3",
+    "@smastrom/react-rating": "^1.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
