--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.3",
+    "@reduxjs/toolkit": "^2.5.0",
     "@smastrom/react-rating": "^1.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
@@ -29,10 +30,12 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.2.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "22.4.0",
