--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.6",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "next": "14.2.5",
@@ -31,10 +32,12 @@
     "react-leaflet": "^4.2.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
+    "universal-cookie": "^7.2.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
