--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@dnd-kit/core": "^6.1.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.3",
-    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@smastrom/react-rating": "^1.5.0",
     "antd": "^5.20.1",
@@ -25,6 +24,7 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "next": "14.2.5",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
