--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_SERVER_URL=http://10.0.70.87:8020/api/v1
 
-GOOGLE_ID=
-GOOGLE_SECRET=
+GOOGLE_ID=618983306322-invi3vrm3cb2riivkt31oupm7foajmoq.apps.googleusercontent.com
+GOOGLE_SECRET=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
 
 NEXTAUTH_SECRET=abc
