--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ NEXT_PUBLIC_SERVER_URL=http://10.0.70.87:8020/api/v1
 
 GOOGLE_ID=618983306322-invi3vrm3cb2riivkt31oupm7foajmoq.apps.googleusercontent.com
 GOOGLE_SECRET=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
+FACEBOOK_CLIENT_ID=6930507426993274
+FACEBOOK_CLIENT_SECRET=b6f1ff284e8ec3bc021b23d8191da285
 
 NEXTAUTH_SECRET=abc
