--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.5.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^3.1.1",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
+    "stripe": "^17.5.0",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.2",
     "universal-cookie": "^7.2.2",
