--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_SERVER_URL=http://10.0.70.87:8020/api/v1
-
+NEXT_PUBLIC_SOCKET_API=http://10.0.70.112:3020
 GOOGLE_ID=618983306322-invi3vrm3cb2riivkt31oupm7foajmoq.apps.googleusercontent.com
 GOOGLE_SECRET=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
 FACEBOOK_CLIENT_ID=
