--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.20.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.5.6",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -36,6 +37,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "stripe": "^17.5.0",
     "swiper": "^11.1.14",
