--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^3.1.1",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
